SFDC Automation/src/objects/CSISurvey__c.object
<CustomObject>
    <description>Used to house CSI survey data from CSI Application after Survey was moved to Old toll from Salesforce.</description>
    <fields>
        <fullName>Account_Manager_Satisfaction__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with their Account Manager.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with their Account Manager.</inlineHelpText>
        <label>Account Manager Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSI Surveys</relationshipLabel>
        <relationshipName>CSISurveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CSISurveys</relationshipLabel>
        <relationshipName>CSISurveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer / Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>CSI Surveys</relationshipLabel>
        <relationshipName>CSISurveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likelihood_to_Renew__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the likelihood to renew contract with Ryder.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the likelihood to renew contract with Ryder.</inlineHelpText>
        <label>Likelihood to Renew</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Satisfaction__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the likelihood to renew contract with Ryder.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the likelihood to renew contract with Ryder.</inlineHelpText>
        <label>Maintenance Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_Satisfaction__c</fullName>
        <label>Overall Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shop_Communications__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with Ryder&apos;s shop communications.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with Ryder&apos;s shop communications.</inlineHelpText>
        <label>Shop Communications</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSISurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <description>Unique identifier from CSI tool</description>
        <label>Survey_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Score__c</fullName>
        <label>Survey Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Willingness_to_Refer__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s willingness to refer Ryder to colleagues.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s willingness to refer Ryder to colleagues.</inlineHelpText>
        <label>Willingness to Refer</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ext_CSISurveyID__c</fullName>
        <description>Used for creating unique key on Ryder side for ETL jobs.</description>
        <externalId>true</externalId>
        <label>ext_CSISurveyID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CSISurvey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Score__c</columns>
        <columns>Likelihood_to_Renew__c</columns>
        <columns>Maintenance_Satisfaction__c</columns>
        <columns>Overall_Satisfaction__c</columns>
        <columns>Shop_Communications__c</columns>
        <columns>Willingness_to_Refer__c</columns>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Survey_Type__c</columns>
        <columns>Survey_Creator__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Jan</fullName>
        <columns>Account__c</columns>
        <columns>Customer_Branch__c</columns>
        <columns>Contact__c</columns>
        <columns>Survey_Score__c</columns>
        <columns>Likelihood_to_Renew__c</columns>
        <columns>Maintenance_Satisfaction__c</columns>
        <columns>Overall_Satisfaction__c</columns>
        <columns>Shop_Communications__c</columns>
        <columns>Willingness_to_Refer__c</columns>
        <columns>NAME</columns>
        <columns>Campaign_Name__c</columns>
        <columns>Survey_Type__c</columns>
        <columns>Survey_Creator__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Survey_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2013</value>
        </filters>
        <label>Jan</label>
    </listViews>
    <nameField>
        <label>CSISurvey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSISurveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>